# Crop_Field_Segmentation

./: .gitignore  Dockerfile  README.md  celery_tasks.py  celery_worker.py  coco_utils.py  config.py  data_preparation.py  database_utils.py  dataset.py  docker-compose.yaml  inference.py  metric_logger.py  pipeline.py  pyproject.toml  requirements.txt  requirements_base.txt  settings.yaml  test.py  training.py  transforms.py  utils.py
app/: app.py  celery_tasks.py  celery_worker.py  kicker.py  pipeline.py  tester.py  torched.py  training.py
app/black_box/: coco_eval.py  coco_utils.py  engine.py  utils.py
provision/: base.yaml  deploy.yaml  infrastructure.yaml
provision/archived/: service.yaml
provision/envs/development/: hosts.yaml
provision/envs/production/: hosts.yaml
provision/envs/production/group_vars/: all.yaml
provision/envs/staging/: hosts.yaml
provision/envs/staging/group_vars/: all.yaml
provision/infrastructure_services/: portainer.yaml  postgis_imagination.yaml  postgis_yield_prediction.yaml  redis.yaml
provision/roles/base/defaults/: main.yaml
provision/roles/base/files/: .requirements.txt  ansible_helper.py
provision/roles/base/filter_plugins/: helper.py
provision/roles/base/tasks/: generate_project_tasks.yaml  infrastructure.yaml  main.yaml  process_docker_info.yaml  read_dyna_data.yaml  run_container.yaml
provision/roles/base/tasks/archived/: read_secrets.yaml
provision/roles/base/tasks/initial/: extract_project_info.yaml  generate_ansible_secret.yaml  generate_settings.yaml  pull_project.yaml
provision/roles/base/vars/: main.yaml
provision/service_tasks/: service.yaml
provision/templates/: infra.yaml  settings.yaml
provision/templates/docker/: default.yaml  infra.yaml  service.yaml
