[tool.poetry]
name = "crop_field_segmentation"
version = "0.1.0"
description = ""
authors = ["farkhad.kuanyshkereyev"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
